rust/transpiler/snapshots/slots@named_slots@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/slots/named_slots.hyper
---
def NamedSlots(*, _children: str = "", _sidebar_children: str = "") -> str:
    _parts = []
    _parts.append("<div class=\"layout\">")
    _parts.append("<aside>")
    _parts.append(_sidebar_children)
    _parts.append("</aside>")
    _parts.append("<main>")
    _parts.append(_children)
    _parts.append("</main>")
    _parts.append("</div>")
    return "".join(_parts)
